--- a/index.html
+++ b/index.html
@@ -77,15 +77,7 @@
                     <img id="product-image" src="/img/image-4.jpg" class="float-left mr-4 mb-3"
                          style="width: 100%; max-width: 100%; border: 2px solid #6c757d; box-shadow: 0 0 5px rgba(0,0,0,0.3); padding: 5px;">
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                        mollit anim id est laborum.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-                        dicta sunt explicabo.</p>
+                    <div class="productDescription"></div>
 
                 </div>
             </div>
@@ -121,11 +113,20 @@
     $(document).ready(function(){
         const id = getUrlParameter('id');
 
-        // set image
-        if (id) {
-            $("#product-image").attr("src", "/img/image-" + id + ".jpg");
-        } else {
-            $("#product-image").remove();
+        if (id && id.trim() !== '') {
+            $.get("/api/product/" + id, function (data) {
+                if (data && data.productId && data.productName) {
+                    $("#title").text(data.productName);
+                    $("#productDescription").html(data.productDescription);
+                }
+
+                $("#product-image").attr("src", "/img/image-" + id + ".jpg");
+
+            }).fail(function (jqXHR, textStatus, errorThrown) {
+                console.error("error fetching products:", textStatus, errorThrown);
+                $("#title").text("Error loading product details");
+                $("#product-image").remove();
+            });
         }
     });
 </script>
