--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <img id="product-image" src="/img/image-4.jpg" class="float-left mr-4 mb-3"
                          style="width: 100%; max-width: 100%; border: 2px solid #6c757d; box-shadow: 0 0 5px rgba(0,0,0,0.3); padding: 5px;">
 
-                    <div class="productDescription"></div>
+                    <div id="productDescription"></div>
 
                 </div>
             </div>
